Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109287

[macOS] Crash in QNSOpenSavePanelDelegate

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.0
    • 6.2.4, 6.3.2
    • QPA
    • None
    • macOS
    • 10b5b4cbb (dev)

    Description

      I see such crashes among our users crash reports. Unfortunately have no reproducer or more details as we don't experience such crashes during internal testing.

      With Qt 6.3.2:

      Date/Time:       2022-12-07T10:07:23.999Z
      Launch Time:     2022-12-07T10:06:51Z
      OS Version:      Mac OS X 12.4 (21F79)
      Report Version:  104
      
      Exception Type:  SIGSEGV
      Exception Codes: SEGV_MAPERR at 0x6000000018
      Crashed Thread:  0
      
      Thread 0 Crashed:
      0   QtQml                                0x000000010dc5c6d4 QQmlData::isSignalConnected(QAbstractDeclarativeData*, QObject const*, int) (qqmldata_p.h:380)
      1   QtCore                               0x0000000110a6823d void doActivate<false>(QObject*, int, void**) (qobject_p.h:462)
      2   QtGui                                0x0000000110260837 QPlatformFileDialogHelper::directoryEntered(QUrl const&) (moc_qplatformdialoghelper.cpp:1159)
      3   libqcocoa.dylib                      0x0000000113b03cae -[QNSOpenSavePanelDelegate panel:directoryDidChange:] (qcocoafiledialoghelper.mm:425)
      4   AppKit                               0x00007ff81967686c -[NSSavePanel observeAsynchronousDelegateMethodCallKeyPath:paramDict:] + 858
      5   AppKit                               0x00007ff819677887 -[NSSavePanel observeValueForKeyPath:ofObject:change:context:] + 561
      6   Foundation                           0x00007ff8170641aa NSKeyValueNotifyObserver + 305
      7   Foundation                           0x00007ff8171280b9 NSKeyValueDidChange + 430
      8   Foundation                           0x00007ff8171d084e NSKeyValueDidChangeWithPerThreadPendingNotifications + 145
      9   ViewBridge                           0x00007ff81d797091 __41-[NSViewBridge setObject:forKey:withKVO:]_block_invoke + 359
      10  ViewBridge                           0x00007ff81d817701 withHintInProgress + 197
      11  ViewBridge                           0x00007ff81d78ef77 -[NSViewBridge setObject:forKey:withKVO:] + 416
      12  ViewBridge                           0x00007ff81d7901cc -[NSViewBridge nonLocalChangeInProgress:block:] + 171
      13  ViewBridge                           0x00007ff81d78ff8c -[NSRemoteViewMarshal exceptionSafeSetRemoteObject:forKey:withReply:] + 263
      14  ViewBridge                           0x00007ff81d78fe42 -[NSRemoteViewMarshal setRemoteObject:forKey:withReply:] + 55
      15  CoreFoundation                       0x00007ff8162119cc 0x7ff8161ae000 + 408012
      16  CoreFoundation                       0x00007ff816211873 0x7ff8161ae000 + 407667
      17  ViewBridge                           0x00007ff81d78df00 __deferNSXPCInvocationOntoMainThread_block_invoke + 227
      18  ViewBridge                           0x00007ff81d7812c4 __wrapBlockWithVoucher_block_invoke + 36
      19  ViewBridge                           0x00007ff81d780f4f __deferBlockOntoMainThread_block_invoke_2 + 273
      20  CoreFoundation                       0x00007ff81622dd31 0x7ff8161ae000 + 523569
      21  CoreFoundation                       0x00007ff81622dbdc 0x7ff8161ae000 + 523228
      22  CoreFoundation                       0x00007ff81622cf4d 0x7ff8161ae000 + 520013
      23  CoreFoundation                       0x00007ff81622be5c 0x7ff8161ae000 + 515676
      24  HIToolbox                            0x00007ff81eed35e6 RunCurrentEventLoopInMode + 291
      25  HIToolbox                            0x00007ff81eed334a ReceiveNextEventCommon + 593
      26  HIToolbox                            0x00007ff81eed30e5 _BlockUntilNextEventMatchingListInModeWithFilter + 69
      27  AppKit                               0x00007ff818c6b1fd _DPSNextEvent + 926
      28  AppKit                               0x00007ff818c698ba -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 1393
      29  AppKit                               0x00007ff818c5bf69 -[NSApplication run] + 585
      30  libqcocoa.dylib                      0x0000000113afef18 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (qcocoaeventdispatcher.mm:430)
      31  QtCore                               0x0000000110a1f826 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (qeventloop.cpp:136)
      32  QtCore                               0x0000000110a16615 QCoreApplication::exec() (qcoreapplication.cpp:1388)
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              vestbo Tor Arne Vestbø
              studiosus Vladimir Belyavsky
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes